--- a/views/index.pug
+++ b/views/index.pug
@@ -3,8 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  p Hello World!!!! how ayr you doing!!!
+  p Hello World!!!! how are you doing!!!
   
-  Test run 1 
-  
-  Test run 2
+  p Test run qwerty
